--- a/.github/workflows/datashare_provisions.yaml
+++ b/.github/workflows/datashare_provisions.yaml
@@ -8,14 +8,12 @@ on:
     branches:
     - main_datashare
   schedule:
-     - cron: '*/5 * * * *'
+     - cron: "*/10 * * * *"
 env:
   TOOLKIT_AUTH_TOKEN: ${{ secrets.TOOLKIT_AUTH_TOKEN }}
   TOOLKIT_CLI_DOWNLOAD_URL: ${{ secrets.TOOLKIT_CLI_DOWNLOAD_URL }}
   TOOLKIT_CLI_VERSION: "0.56.0"
   SNOWFLAKE_PRIVATE_KEY_PEM: ${{ secrets.SNOWFLAKE_PRIVATE_KEY_PEM }}
-  #SNOWFLAKE_USER: ${{ vars.SNOWFLAKE_USER }}
-  # SNOWFLAKE_URL: ${{ secrets.SNOWFLAKE_URL }}
   SNOWFLAKE_PRIVATE_KEY_FILE: ${{ vars.SNOWFLAKE_PRIVATE_KEY_FILE }}
   SNOWFLAKE_PRIVATE_KEY_PASSPHRASE: ${{ secrets.SNOWFLAKE_PRIVATE_KEY_PASSPHRASE }}
 
