made changes to pull of main branch prov tool

--- a/.github/workflows/provisions.yaml
+++ b/.github/workflows/provisions.yaml
@@ -3,7 +3,7 @@ name: Snowflake Provisioning
 on:
   pull_request:
     branches:
-      - 'feature/main_*'
+      - 'feature/mainprovision_*'
   push:
     branches:
     - main
