--- a/.github/workflows/provisions.yaml
+++ b/.github/workflows/provisions.yaml
@@ -51,7 +51,7 @@ jobs:
       shell: bash
       if: github.event_name == 'push' && ${{  contains( github.head_ref, 'feature/mainprovision_' )}}
       run: |
-         echo $github.head_ref
+         echo ${GITHUB_HEAD_REF}
          install/toolkit provision apply --approve | tee plan.log      
 
 
