--- a/.github/workflows/datashare_provisions.yaml
+++ b/.github/workflows/datashare_provisions.yaml
@@ -7,8 +7,8 @@ on:
   push:
     branches:
     - main_datashare
-  schedule:
-     - cron: "*/5 * * * *"
+  # schedule:
+  #    - cron: "*/5 * * * *"
 env:
   TOOLKIT_AUTH_TOKEN: ${{ secrets.TOOLKIT_AUTH_TOKEN }}
   TOOLKIT_CLI_DOWNLOAD_URL: ${{ secrets.TOOLKIT_CLI_DOWNLOAD_URL }}
