--- a/DataShareStack/stack/templates/shared-database.yaml
+++ b/DataShareStack/stack/templates/shared-database.yaml
@@ -1,8 +1,17 @@
 sharedDatabases:
-- name: {{name}}
+- name: {{sh_db_name}}
   shareName: {{share_name}}
 
-
+privilegeGrants:
+  {% if roles is truthy %}
+  {% for rl in roles %}
+  - privilege: "IMPORTED PRIVILEGES"
+    objectType: "DATABASE"
+    objectName: {{sh_db_name}}
+    roleName: {{rl.name}}
+    destroy: {{rl.deprovision}}
+  {% endfor %}
+  {% endif %}
 
  
 
