--- a/DataShareStack/toolkit.conf
+++ b/DataShareStack/toolkit.conf
@@ -42,7 +42,7 @@ provision {
 
     metadata {
     database = DB_AVTR_PROVISION
-    schema = datashare_provision
+    schema = datashares_provision
     statementTable = statements
     #leaseSeconds = 7200 // 2 hours
   }
