--- a/.github/workflows/provisions.yaml
+++ b/.github/workflows/provisions.yaml
@@ -49,9 +49,9 @@ jobs:
       
     - name: Apply changes on merge to master
       shell: bash
-      if: github.event_name == 'push' && ${{  contains( github.head_ref, 'feature/mainprovision_' )}}
+      if: github.event_name == 'push'  && github.event.pull_request.head.ref == '/feature/mainprovision_.+/'
       run: |
-         echo ${GITHUB_HEAD_REF}
+         
          install/toolkit provision apply --approve | tee plan.log      
 
 
