--- a/.github/workflows/provisions.yaml
+++ b/.github/workflows/provisions.yaml
@@ -15,7 +15,7 @@ env:
   SNOWFLAKE_PRIVATE_KEY_PEM: ${{ secrets.SNOWFLAKE_PRIVATE_KEY_PEM }}
   SNOWFLAKE_PRIVATE_KEY_FILE: ${{ vars.SNOWFLAKE_PRIVATE_KEY_FILE }}
   SNOWFLAKE_PRIVATE_KEY_PASSPHRASE: ${{ secrets.SNOWFLAKE_PRIVATE_KEY_PASSPHRASE }}
-
+  GIT_HUB_HEAD_REF: ${{}}
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -49,9 +49,11 @@ jobs:
       
     - name: Apply changes on merge to master
       shell: bash
+      
       if: github.event_name == 'push'  && github.event.pull_request.head.ref == '/feature/mainprovision_.+/'
       run: |
-         
+         echo "BRANCH_NAME=$(echo ${{ github.event.pull_request.head.ref }})" >> $GITHUB_ENV
+         echo "The branch name is: ${{ env.BRANCH_NAME }}"
          install/toolkit provision apply --approve | tee plan.log      
 
 
