--- a/.github/workflows/provisions.yaml
+++ b/.github/workflows/provisions.yaml
@@ -29,6 +29,7 @@ jobs:
       run: |
         chmod +x bin/install-toolkit-cli
         bin/install-toolkit-cli
+        echo "BRANCH_NAME=$(echo ${{ github.event.pull_request.head.ref }})" 
         echo "BRANCH_NAME=$(echo ${{ github.event.pull_request.head.ref }})" >> $GITHUB_ENV
         echo "The branch name is: ${{ env.BRANCH_NAME }}"
 
