--- a/.github/workflows/provisions.yaml
+++ b/.github/workflows/provisions.yaml
@@ -34,6 +34,7 @@ jobs:
         echo "BRANCH_NAME3=$(echo ${{ github.ref_name }})" 
         echo "BRANCH_NAME4=$(echo ${{ github.ref }})" 
         echo "BRANCH_NAME5=$(echo ${{ github.base_ref }})" 
+        echo "BRANCH_NAME3=$(echo ${{ github.event.pull_request.head.label}})" 
         echo "BRANCH_NAME=$(echo ${{ github.event.pull_request.head.ref }})" >> $GITHUB_ENV
         echo "The branch name is: ${{ env.BRANCH_NAME }}"
 
