--- a/.github/workflows/datashare_provisions.yaml
+++ b/.github/workflows/datashare_provisions.yaml
@@ -39,7 +39,8 @@ jobs:
         echo "BRANCH_NAME3=$(echo ${{ github.ref_name }})" 
         echo "BRANCH_NAME4=$(echo ${{ github.ref }})" 
         echo "BRANCH_NAME5=$(echo ${{ github.base_ref }})" 
-        echo "BRANCH_NAME3=$(echo ${{ github.event.pull_request.head.label}})" 
+        echo "BRANCH_NAME6=$(echo ${{ github.event.pull_request.head.label}})" 
+        echo "BRANCH_NAME7=$(echo ${{github.event.pull_request.base.ref}}"
     - name: Set up Java 
       uses: actions/setup-java@v3
       with:
