--- a/.github/workflows/datashare_provisions.yaml
+++ b/.github/workflows/datashare_provisions.yaml
@@ -41,6 +41,7 @@ jobs:
         echo "BRANCH_NAME5=$(echo ${{ github.base_ref }})" 
         echo "BRANCH_NAME6=$(echo ${{ github.event.pull_request.head.label}})" 
         echo "BRANCH_NAME7=$(echo ${{github.event.pull_request.base.ref}}"
+#       echo
     - name: Set up Java 
       uses: actions/setup-java@v3
       with:
