--- a/toolkit.conf
+++ b/toolkit.conf
@@ -49,7 +49,7 @@ provision {
     owner {
     role = SECURITYADMIN
     user = SECURITYADMIN
-    tag = SYSADMIN
+    tag = ACCOUNTADMIN
     monitor = ACCOUNTADMIN
     default = SYSADMIN
   }
@@ -60,7 +60,7 @@ provision {
 
   threads = 4
   enableCache = true
-  maxDestroys = 500
+  maxDestroys = 200
   userDestroyType = DISABLE
   }
 
