--- a/stack/templates/function-operation-role.yaml
+++ b/stack/templates/function-operation-role.yaml
@@ -1,19 +1,30 @@
+{% if create_role is truthy %}
 roles:
-  - name: "{{fo_role_name}}"
+  - name: "{{fr_role_name}}"
+{% if tags is truthy %}
+    tags:
+{% for tag in tags %}
+      {{ tag.tag_name }}: {{ tag.tag_value }}
+{% endfor %}
+{% endif %}
+{% endif %}
+
 roleGrants:
   {% if roles is truthy %}
   {% for rl in roles %}
   - name: "{{rl.name}}"
     toRoles:
-      - "{{fo_role_name}}"
+      - "{{fr_role_name}}"
     destroy: "{{rl.deprovision}}"
   {% endfor %}
   {% endif %}
 
-#GRANT OWNERSHIP OF THE ROLE TO AZURE AD ROLE- AAD_PROVISIONER
-privilegeGrants:
-- privilege: "OWNERSHIP"
-  objectType: "ROLE"
-  objectName: {{fo_role_name}}
-  currentGrants: COPY
-  roleName: "AAD_PROVISIONER"
+#UNCOMMENT BELOW ONCE BALBIR IS BACK, CHANGING OWNERSHIP OF FR ROLE MAY IMPACT RUNNING JOBS. 
+# {% if create_role is truthy %}
+# privilegeGrants:
+#   - privilege: "OWNERSHIP"
+#     objectType: "ROLE"
+#     objectName: {{fr_role_name}}
+#     roleName: "AAD_PROVISIONER"
+#     currentGrants: COPY
+# {% endif %}
