--- a/.github/workflows/provisions.yaml
+++ b/.github/workflows/provisions.yaml
@@ -10,6 +10,7 @@ on:
 
 env:
   TOOLKIT_AUTH_TOKEN: ${{ secrets.TOOLKIT_AUTH_TOKEN }}
+  TOOLKIT_DOWNLOAD_URL_TOKEN: ${{ secrets.TOOLKIT_DOWNLOAD_URL_TOKEN }}
   SNOWFLAKE_PRIVATE_KEY_PEM: ${{ secrets.SNOWFLAKE_PRIVATE_KEY_PEM }}
   SNOWFLAKE_PRIVATE_KEY_FILE: ${{ vars.SNOWFLAKE_PRIVATE_KEY_FILE }}
   SNOWFLAKE_PRIVATE_KEY_PASSPHRASE: ${{ secrets.SNOWFLAKE_PRIVATE_KEY_PASSPHRASE }}
